--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,50 @@
 html {
+    height: 100vh;
+    min-width: 600px;
+    background-image: linear-gradient(130deg, #FFFFFF, #1C3F80);
+    background-repeat: no-repeat;
+    background-size: auto;
+}
+
+.container {
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: auto;
     font-family: 'Raleway', sans-serif;
 }
 
-.title {
+.logo {
     display: flex;
-    flex-direction: row;
     margin: auto;
-    min-width: 100vw;
-    justify-content: center;
-    margin-top: 2em;
+    flex-direction: column;
+    max-width: 500px;
+    padding: 1.5rem 0;
+    align-items: center;
+}
+
+.logo img{
+    max-width: 30%;
+}
+
+.main {
+    padding: 20px;
+}
+
+form {
+    background-color: white;
+    padding: 50px;
+    border-radius: 8px;
+    display: flex;
+}
+
+input[type="text"] {
+    height: 30px;
+    outline: 0;
+    border: none;
+    font-size: 1rem;
+    font-family: 'Raleway', sans-serif;
+    color: #595959;
+    flex-grow: 1;
 }
