adding items to list

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,10 @@ li {
     color: #595959;
 }
 
+.todo-item {
+    flex-grow: 1;
+}
+
 .clearAll {
     display: flex;
     justify-content: flex-end;
