--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,17 @@ li {
 .clearAll:hover {
     color: lightcoral;
 }
+
+i {
+    pointer-events: none;
+}
+
+.todo-list-item {
+    transition: all 0.3s ease-out;
+}
+
+.todo-list-item-fall {
+    transform: translateY(12rem) rotateZ(10deg);
+    opacity: 0;
+
+}
